nav bar visibility fixed

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+   .collapse{visibility: visible !important;}
  @media (max-width: 991.98px) {
    .has-children .dropdown{display:block;
    visibility: visible !important;
